@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4219 2024/04/30 13:24:17 wiz Exp $
+# $NetBSD: Makefile,v 1.4220 2024/04/30 14:47:37 wiz Exp $
 #
 
 COMMENT=	Development utilities
@@ -3153,7 +3153,6 @@ SUBDIR+=	py-zope.testing
 SUBDIR+=	py-zope.testrunner
 SUBDIR+=	py27-attrs
 SUBDIR+=	py27-cffi
-SUBDIR+=	py27-coverage
 SUBDIR+=	py27-game
 SUBDIR+=	py27-pluggy
 SUBDIR+=	pycharm-bin
