@@ -1,6 +1,0 @@
-Python module that measures code coverage during Python execution.
-It uses the code analysis tools and tracing hooks provided in
-the Python standard library to determine which lines are executable,
-and which have been executed.
-
-This package contains the python 2.7 version.
