@@ -1,134 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2022/08/24 09:18:25 wiz Exp $
-bin/coverage-${PYVERSSUFFIX}
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/entry_points.txt
-${PYSITELIB}/${EGG_INFODIR}/not-zip-safe
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/coverage/__init__.py
-${PYSITELIB}/coverage/__init__.pyc
-${PYSITELIB}/coverage/__init__.pyo
-${PYSITELIB}/coverage/__main__.py
-${PYSITELIB}/coverage/__main__.pyc
-${PYSITELIB}/coverage/__main__.pyo
-${PYSITELIB}/coverage/annotate.py
-${PYSITELIB}/coverage/annotate.pyc
-${PYSITELIB}/coverage/annotate.pyo
-${PYSITELIB}/coverage/backward.py
-${PYSITELIB}/coverage/backward.pyc
-${PYSITELIB}/coverage/backward.pyo
-${PYSITELIB}/coverage/bytecode.py
-${PYSITELIB}/coverage/bytecode.pyc
-${PYSITELIB}/coverage/bytecode.pyo
-${PYSITELIB}/coverage/cmdline.py
-${PYSITELIB}/coverage/cmdline.pyc
-${PYSITELIB}/coverage/cmdline.pyo
-${PYSITELIB}/coverage/collector.py
-${PYSITELIB}/coverage/collector.pyc
-${PYSITELIB}/coverage/collector.pyo
-${PYSITELIB}/coverage/config.py
-${PYSITELIB}/coverage/config.pyc
-${PYSITELIB}/coverage/config.pyo
-${PYSITELIB}/coverage/context.py
-${PYSITELIB}/coverage/context.pyc
-${PYSITELIB}/coverage/context.pyo
-${PYSITELIB}/coverage/control.py
-${PYSITELIB}/coverage/control.pyc
-${PYSITELIB}/coverage/control.pyo
-${PYSITELIB}/coverage/data.py
-${PYSITELIB}/coverage/data.pyc
-${PYSITELIB}/coverage/data.pyo
-${PYSITELIB}/coverage/debug.py
-${PYSITELIB}/coverage/debug.pyc
-${PYSITELIB}/coverage/debug.pyo
-${PYSITELIB}/coverage/disposition.py
-${PYSITELIB}/coverage/disposition.pyc
-${PYSITELIB}/coverage/disposition.pyo
-${PYSITELIB}/coverage/env.py
-${PYSITELIB}/coverage/env.pyc
-${PYSITELIB}/coverage/env.pyo
-${PYSITELIB}/coverage/execfile.py
-${PYSITELIB}/coverage/execfile.pyc
-${PYSITELIB}/coverage/execfile.pyo
-${PYSITELIB}/coverage/files.py
-${PYSITELIB}/coverage/files.pyc
-${PYSITELIB}/coverage/files.pyo
-${PYSITELIB}/coverage/fullcoverage/encodings.py
-${PYSITELIB}/coverage/fullcoverage/encodings.pyc
-${PYSITELIB}/coverage/fullcoverage/encodings.pyo
-${PYSITELIB}/coverage/html.py
-${PYSITELIB}/coverage/html.pyc
-${PYSITELIB}/coverage/html.pyo
-${PYSITELIB}/coverage/htmlfiles/coverage_html.js
-${PYSITELIB}/coverage/htmlfiles/favicon_32.png
-${PYSITELIB}/coverage/htmlfiles/index.html
-${PYSITELIB}/coverage/htmlfiles/jquery.ba-throttle-debounce.min.js
-${PYSITELIB}/coverage/htmlfiles/jquery.hotkeys.js
-${PYSITELIB}/coverage/htmlfiles/jquery.isonscreen.js
-${PYSITELIB}/coverage/htmlfiles/jquery.min.js
-${PYSITELIB}/coverage/htmlfiles/jquery.tablesorter.min.js
-${PYSITELIB}/coverage/htmlfiles/keybd_closed.png
-${PYSITELIB}/coverage/htmlfiles/keybd_open.png
-${PYSITELIB}/coverage/htmlfiles/pyfile.html
-${PYSITELIB}/coverage/htmlfiles/style.css
-${PYSITELIB}/coverage/htmlfiles/style.scss
-${PYSITELIB}/coverage/inorout.py
-${PYSITELIB}/coverage/inorout.pyc
-${PYSITELIB}/coverage/inorout.pyo
-${PYSITELIB}/coverage/jsonreport.py
-${PYSITELIB}/coverage/jsonreport.pyc
-${PYSITELIB}/coverage/jsonreport.pyo
-${PYSITELIB}/coverage/misc.py
-${PYSITELIB}/coverage/misc.pyc
-${PYSITELIB}/coverage/misc.pyo
-${PYSITELIB}/coverage/multiproc.py
-${PYSITELIB}/coverage/multiproc.pyc
-${PYSITELIB}/coverage/multiproc.pyo
-${PYSITELIB}/coverage/numbits.py
-${PYSITELIB}/coverage/numbits.pyc
-${PYSITELIB}/coverage/numbits.pyo
-${PYSITELIB}/coverage/parser.py
-${PYSITELIB}/coverage/parser.pyc
-${PYSITELIB}/coverage/parser.pyo
-${PYSITELIB}/coverage/phystokens.py
-${PYSITELIB}/coverage/phystokens.pyc
-${PYSITELIB}/coverage/phystokens.pyo
-${PYSITELIB}/coverage/plugin.py
-${PYSITELIB}/coverage/plugin.pyc
-${PYSITELIB}/coverage/plugin.pyo
-${PYSITELIB}/coverage/plugin_support.py
-${PYSITELIB}/coverage/plugin_support.pyc
-${PYSITELIB}/coverage/plugin_support.pyo
-${PYSITELIB}/coverage/python.py
-${PYSITELIB}/coverage/python.pyc
-${PYSITELIB}/coverage/python.pyo
-${PYSITELIB}/coverage/pytracer.py
-${PYSITELIB}/coverage/pytracer.pyc
-${PYSITELIB}/coverage/pytracer.pyo
-${PYSITELIB}/coverage/report.py
-${PYSITELIB}/coverage/report.pyc
-${PYSITELIB}/coverage/report.pyo
-${PYSITELIB}/coverage/results.py
-${PYSITELIB}/coverage/results.pyc
-${PYSITELIB}/coverage/results.pyo
-${PYSITELIB}/coverage/sqldata.py
-${PYSITELIB}/coverage/sqldata.pyc
-${PYSITELIB}/coverage/sqldata.pyo
-${PYSITELIB}/coverage/summary.py
-${PYSITELIB}/coverage/summary.pyc
-${PYSITELIB}/coverage/summary.pyo
-${PYSITELIB}/coverage/templite.py
-${PYSITELIB}/coverage/templite.pyc
-${PYSITELIB}/coverage/templite.pyo
-${PYSITELIB}/coverage/tomlconfig.py
-${PYSITELIB}/coverage/tomlconfig.pyc
-${PYSITELIB}/coverage/tomlconfig.pyo
-${PYSITELIB}/coverage/tracer.so
-${PYSITELIB}/coverage/version.py
-${PYSITELIB}/coverage/version.pyc
-${PYSITELIB}/coverage/version.pyo
-${PYSITELIB}/coverage/xmlreport.py
-${PYSITELIB}/coverage/xmlreport.pyc
-${PYSITELIB}/coverage/xmlreport.pyo
