@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.1 2022/08/24 09:18:25 wiz Exp $
-
-BLAKE2s (coverage-5.5.tar.gz) = 3719ce8c82cc3fd10fe8b9ff724947f855ea83c4669738131318260076f31d6e
-SHA512 (coverage-5.5.tar.gz) = fb78b4920a2f18afb9545a6f13910f491708443965881954fff6ee8553ab3d6bd898f7a95df1091435e8d5627ac850b880a6233e716a6acb934ecc195ec2ee52
-Size (coverage-5.5.tar.gz) = 691258 bytes
